welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:12: error: ':' expected but ')' found.
def estAdo(n): Boolean=
            ^countTeen:16: error: identifier expected but '}' found.
 }
 ^